Fix time picker component overlapping

--- a/src/main/webapp/app/time-period-picker/time-period-picker.component.scss
+++ b/src/main/webapp/app/time-period-picker/time-period-picker.component.scss
@@ -11,7 +11,6 @@ $foreground: rgb(200, 200, 200);
 
 .navbar {
   position: relative;
-  z-index: 100;
   padding: 1rem 0;
   width: 100%;
   //overflow-x: hidden;
